--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <meta name="twitter:image" content="https://aaitek.com.au/logo.png" />
     
     <!-- Favicons -->
-    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="/Aaitek logo in White.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/Aaitek logo in White.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/Aaitek logo in White.png" />
+    <link rel="apple-touch-icon" href="/Aaitek logo in White.png" />
     <link rel="manifest" href="/favicon_io/site.webmanifest" />
     
     <!-- Canonical URL -->
