--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://aaitek.com.au/" />
     <meta property="og:title" content="Aaitek - Empowering Businesses With AI, Data Analytics & Cloud" />
     <meta property="og:description" content="Transform your digital vision into reality with Aaitek. Enterprise-grade AI, cloud solutions, and digital transformation services." />
-    <meta property="og:image" content="https://aaitek.com.au/Aaitek logo in Black.png" />
+    <meta property="og:image" content="https://aaitek.com.au/logo.png" />
     <meta property="og:site_name" content="Aaitek Technology Specialists" />
     
     <!-- Twitter - Default (overridden by react-helmet-async) -->
@@ -21,7 +21,7 @@
     <meta name="twitter:url" content="https://aaitek.com.au/" />
     <meta name="twitter:title" content="Aaitek - Empowering Businesses With AI, Data Analytics & Cloud" />
     <meta name="twitter:description" content="Transform your digital vision into reality with Aaitek. Enterprise-grade AI, cloud solutions, and digital transformation services." />
-    <meta name="twitter:image" content="https://aaitek.com.au/Aaitek logo in Black.png" />
+    <meta name="twitter:image" content="https://aaitek.com.au/logo.png" />
     
     <!-- Canonical URL - Default (overridden by react-helmet-async) -->
     <link rel="canonical" href="https://aaitek.com.au/" />
