Fix image URLs for social media previews: use absolute URLs and add required meta tags

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <meta property="og:title" content="Aaitek - Empowering Businesses With AI, Data Analytics & Cloud" />
     <meta property="og:description" content="Transform your digital vision into reality with Aaitek. Enterprise-grade AI, cloud solutions, and digital transformation services." />
     <meta property="og:image" content="https://aaitek.com/Aaitek%20logo%20in%20Black.png" />
+    <meta property="og:image:secure_url" content="https://aaitek.com/Aaitek%20logo%20in%20Black.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Aaitek Technology Specialists" />
     
     <!-- Twitter - Default (overridden by react-helmet-async) -->
@@ -22,6 +26,7 @@
     <meta name="twitter:title" content="Aaitek - Empowering Businesses With AI, Data Analytics & Cloud" />
     <meta name="twitter:description" content="Transform your digital vision into reality with Aaitek. Enterprise-grade AI, cloud solutions, and digital transformation services." />
     <meta name="twitter:image" content="https://aaitek.com/Aaitek%20logo%20in%20Black.png" />
+    <meta name="twitter:image:alt" content="Aaitek - Empowering Businesses With AI, Data Analytics & Cloud" />
     
     <!-- Canonical URL - Default (overridden by react-helmet-async) -->
     <link rel="canonical" href="https://aaitek.com/" />
