--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YMPRK2VMWV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-YMPRK2VMWV');
+    </script>
+    
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="/Aaitek logo in Black.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/Aaitek logo in Black.png" />
