Update prerender: Remove homepage-specific image handling

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </script>
     
     <!-- Favicons -->
-    <link rel="icon" type="image/png" href="/footer-logo.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/footer-logo.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/footer-logo.png" />
-    <link rel="apple-touch-icon" href="/footer-logo.png" />
+    <link rel="icon" type="image/png" href="/Aaitek logo in Black.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/Aaitek logo in Black.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/Aaitek logo in Black.png" />
+    <link rel="apple-touch-icon" href="/Aaitek logo in Black.png" />
     <link rel="manifest" href="/favicon_io/site.webmanifest" />
     
     <!-- Preconnect for performance -->
