--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
     <meta property="og:url" content="https://aaitek.com/" />
     <meta property="og:title" content="Aaitek - Empowering Businesses With AI, Data Analytics & Cloud" />
     <meta property="og:description" content="Transform your digital vision into reality with Aaitek. Enterprise-grade AI, cloud solutions, and digital transformation services." />
-    <meta property="og:image" content="https://aaitek.com/footer-logo.png" />
+    <meta property="og:image" content="https://aaitek.com/Aaitek%20logo%20in%20Black.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Aaitek Logo" />
+    <meta property="og:image:type" content="image/png" />
     
     <!-- Twitter Card (Fallback for homepage) -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@aaitek" />
     <meta name="twitter:title" content="Aaitek - Empowering Businesses With AI, Data Analytics & Cloud" />
     <meta name="twitter:description" content="Transform your digital vision into reality with Aaitek. Enterprise-grade AI, cloud solutions, and digital transformation services." />
-    <meta name="twitter:image" content="https://aaitek.com/footer-logo.png" />
+    <meta name="twitter:image" content="https://aaitek.com/Aaitek%20logo%20in%20Black.png" />
     <meta name="twitter:image:alt" content="Aaitek Logo" />
     
     <!-- Vercel Web Analytics -->
